--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
@@ -7,6 +7,7 @@
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:media="using:Microsoft.Xaml.Interactions.Media"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -83,10 +84,14 @@
         <!--Animation triggers-->
         <interactivity:Interaction.Behaviors>
             <core:EventTriggerBehavior EventName="PointerEntered">
-                <core:CallMethodAction TargetObject="{x:Bind StoryboardZoomIn}" MethodName="Begin"/>
+                <media:ControlStoryboardAction
+                    Storyboard="{x:Bind StoryboardZoomIn}"
+                    ControlStoryboardOption="Play"/>
             </core:EventTriggerBehavior>
             <core:EventTriggerBehavior EventName="PointerExited">
-                <core:CallMethodAction TargetObject="{x:Bind StoryboardZoomOut}" MethodName="Begin"/>
+                <media:ControlStoryboardAction
+                    Storyboard="{x:Bind StoryboardZoomOut}"
+                    ControlStoryboardOption="Play"/>
             </core:EventTriggerBehavior>
         </interactivity:Interaction.Behaviors>
 
