--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -39,7 +39,6 @@
     <!--Main app UI-->
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
             <RowDefinition Height="68"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
@@ -50,7 +49,7 @@
         <!--Console and IDE-->
         <Pivot
             Grid.Row="0"
-            Grid.RowSpan="3"
+            Grid.RowSpan="2"
             Style="{StaticResource ExpandedPivotWithNoHeaderStyle}"
             SelectedIndex="{x:Bind converters:PivotSelectionConverter.ConvertToIndex(ViewModel.SelectedView), Mode=OneWay}">
             <PivotItem>
@@ -63,11 +62,10 @@
 
         <!--Header drop shadow-->
         <Rectangle
-            Grid.Row="2"
+            Grid.Row="1"
             VerticalAlignment="Top"
             IsHitTestVisible="False"
-            Height="8"
-            Visibility="Visible">
+            Height="8">
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0,0" StartPoint="0,1">
                     <GradientStop Color="#60000000" Offset="1"/>
@@ -76,30 +74,14 @@
             </Rectangle.Fill>
         </Rectangle>
 
-        <!--Background-->
-        <Border
-            Grid.Row="0"
-            Grid.RowSpan="2"
-            Background="{StaticResource ShellHeaderBackgroundBrush}"/>
-
-        <!--App title-->
-        <TextBlock
-            Grid.Row="0"
-            Foreground="White"
-            Text="Brainf*ck# (Preview)"
-            FontSize="12"
-            FontWeight="SemiLight"
-            Margin="12,0,0,0"
-            VerticalAlignment="Center"/>
-
         <!--Header panel-->
         <shellHeader:HeaderPanel
-            Grid.Row="1"
+            Grid.Row="0"
             SelectedIndex="{x:Bind ViewModel.SelectedView, Converter={StaticResource PivotSelectionConverter}, Mode=TwoWay}"/>
 
         <!--Expandable keyboard area-->
         <Border
-            Grid.Row="3"
+            Grid.Row="2"
             BorderThickness="0,1,0,0"
             BorderBrush="#FF323232"
             Background="{StaticResource VirtualKeyboardBackgroundBrush}">
@@ -130,7 +112,7 @@
 
         <!--Command bar-->
         <controls:AnimatedCommandBar
-            Grid.Row="4"
+            Grid.Row="3"
             IsDynamicOverflowEnabled="False"
             Style="{StaticResource CommandBarRevealStyle}"
             IsPrimaryContentDisplayed="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}">
@@ -357,11 +339,11 @@
         </controls:AnimatedCommandBar>
 
         <!--Status bar-->
-        <local:StatusBar Grid.Row="5"/>
+        <local:StatusBar Grid.Row="4"/>
 
         <!--Sub page host-->
         <host:SubPageHost
             Grid.Row="0"
-            Grid.RowSpan="6"/>
+            Grid.RowSpan="5"/>
     </Grid>
 </UserControl>
