--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ide="using:Brainf_ckSharp.Uwp.Controls.Ide"
-    xmlns:win2d="using:Microsoft.Graphics.Canvas.UI.Xaml">
+    xmlns:win2d="using:Microsoft.Graphics.Canvas.UI.Xaml"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
 
     <!--IDE RichEditBox style-->
     <Style TargetType="ide:Brainf_ckEditBox">
@@ -145,6 +146,13 @@
                                 </Rectangle.RenderTransform>
                             </Rectangle>
                         </Canvas>
+
+                        <!--Syntax error tooltip-->
+                        <muxc:TeachingTip x:Name="SyntaxErrorToolTip">
+                            <muxc:TeachingTip.IconSource>
+                                <muxc:SymbolIconSource Symbol="Important" />
+                            </muxc:TeachingTip.IconSource>
+                        </muxc:TeachingTip>
 
                         <!--Scroller with a presenter for the text renderer. This is done so that
                             the text renderer can have a padding, which is used to simulate a
