--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
@@ -148,7 +148,9 @@
                         </Canvas>
 
                         <!--Syntax error tooltip-->
-                        <muxc:TeachingTip x:Name="SyntaxErrorToolTip">
+                        <muxc:TeachingTip
+                            x:Name="SyntaxErrorToolTip"
+                            IsLightDismissEnabled="True">
                             <muxc:TeachingTip.IconSource>
                                 <muxc:SymbolIconSource Symbol="Important" />
                             </muxc:TeachingTip.IconSource>
